fixed rendering,styling,scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,13 @@ body {
   padding: 5% 15%;
   background-color: black;
 }
+::-webkit-scrollbar {
+  width: 5px;
+  background: black;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--fav-color);
+}
 
 :root {
   --blue: rgb(146, 233, 255);
