--- a/src/Components/Body/Body.scss
+++ b/src/Components/Body/Body.scss
@@ -42,3 +42,9 @@
     }
   }
 }
+
+@media screen and (max-width: 450px) {
+  .Body {
+    padding: 15px 0%;
+  }
+}
